# NAIProjekt

./: .gitignore  LICENSE  README.md  classification_report_EfficientNetB0.txt  classification_report_ResNet50.txt  cuisine_classifier.py  current_requirements.txt  main.py  metrics_EfficientNetB0.txt  metrics_ResNet50.txt  model_selector.py  pyproject.toml  search.py  test.py  train.py  train_efficientnet.py  train_resnet.py
Recipes/: Kotlet_z_lemon_przepis.txt
src/naiprojekt/: cuisine_classifier.py  generate_reports.py  main.py  model_metrics.py  model_selector.py  recipe_recommender.py  test.py
