[project]
name = "NAIProjekt"
version = "0.1.0"
description = "AI Recipe Generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core ML/Data Science
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.1",

    # API i integracje
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",

    # GUI
    "tk",  # wbudowany w Pythona

    # Opcjonalne narzędzia deweloperskie
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0"
]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest>=7.0.0"
]

[tool.poetry]
name = "ai-recipe-generator"
version = "0.1.0"
description = "Generator przepisów kulinarnych wykorzystujący sztuczną inteligencję"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.12.0"
keras = "2.12.0"
tensorflow-intel = "2.12.0"
numpy = "1.23.5"
matplotlib = "3.10.0"
pillow = "11.1.0"
scikit-learn = "1.6.1"
opencv-python = "4.11.0.86"
pandas = "2.2.3"
seaborn = "0.13.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorboard = "2.12.3"
tensorflow-estimator = "2.12.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/naiprojekt"]

