[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "naiprojekt"
version = "0.1.0"
description = "Projekt na NAI - klasyfikacja warzyw i owoców"
requires-python = ">=3.9,<3.11"
dependencies = [
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "astunparse==1.6.3",
    "cachetools==5.5.1",
    "certifi==2024.12.14",
    "cfgv==3.4.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "distlib==0.3.9",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "filelock==3.17.0",
    "flatbuffers==25.1.21",
    "fonttools==4.55.4",
    "fsspec==2024.12.0",
    "gast==0.4.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.0.0",
    "google-pasta==0.2.0",
    "grpcio==1.69.0",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.1",
    "identify==2.6.6",
    "idna==3.10",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "Jinja2==3.1.5",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "keras==2.12.0",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "Markdown==3.7",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "ml_dtypes==0.5.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nodeenv==1.9.1",
    "numpy==1.23.5",
    "oauthlib==3.2.2",
    "openai==1.60.0",
    "opencv-python==4.11.0.86",
    "opt_einsum==3.4.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pre_commit==4.1.0",
    "protobuf==4.25.5",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pydantic==2.10.5",
    "pydantic_core==2.27.2",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "sacremoses==0.1.1",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.11.4",
    "seaborn==0.13.2",
    "sentence-transformers==3.3.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.13.1",
    "tensorboard==2.12.3",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.12.0",
    "tensorflow-estimator==2.12.0",
    "tensorflow-intel==2.12.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tk==0.1.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.48.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "virtualenv==20.29.1",
    "Werkzeug==3.1.3",
    "wrapt==1.14.1"
]

[tool.setuptools]
packages = ["naiprojekt"]
package-dir = {"" = "src"}

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest>=7.0.0"
]

[tool.poetry]
name = "ai-recipe-generator"
version = "0.1.0"
description = "Generator przepisów kulinarnych wykorzystujący sztuczną inteligencję"
authors = ["Mieszko Buczkowski <mieszkobu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.12.0"
keras = "2.12.0"
tensorflow-intel = "2.12.0"
numpy = "1.23.5"
matplotlib = "3.10.0"
pillow = "11.1.0"
scikit-learn = "1.6.1"
opencv-python = "4.11.0.86"
pandas = "2.2.3"
seaborn = "0.13.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorboard = "2.12.3"
tensorflow-estimator = "2.12.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/naiprojekt"]

