[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "naiprojekt"
version = "0.1.0"
description = "Projekt na NAI - klasyfikacja warzyw i owoców"
requires-python = ">=3.9,<3.11"
dependencies = [
    # Core ML & Image Processing
    "tensorflow==2.12.0",
    "tensorflow-intel==2.12.0",  # Wymagane dla TensorFlow na Windows
    "numpy==1.23.5",
    "scikit-learn==1.6.1",
    "opencv-python==4.11.0.86",
    
    # Visualization
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    
    # Image Processing
    "pillow==11.1.0",
    
    # Data Processing
    "pandas==2.2.3",
    
    # TensorFlow Components
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorboard==2.12.3",
    "tensorflow-estimator==2.12.0",
    
    # AI & NLP
    "openai==1.60.0",
    "transformers==4.48.1",
    "torch==2.5.1",
    "sentence-transformers==3.3.1",
    
    # Utils
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "reportlab==4.2.5"
]

[tool.setuptools]
packages = ["naiprojekt"]
package-dir = {"" = "src"}

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pytest>=7.0.0"
]

[tool.poetry]
name = "ai-recipe-generator"
version = "0.1.0"
description = "Generator przepisów kulinarnych wykorzystujący sztuczną inteligencję"
authors = ["Mieszko Buczkowski <mieszkobu123@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.12.0"
keras = "2.12.0"
tensorflow-intel = "2.12.0"
numpy = "1.23.5"
matplotlib = "3.10.0"
pillow = "11.1.0"
scikit-learn = "1.6.1"
opencv-python = "4.11.0.86"
pandas = "2.2.3"
seaborn = "0.13.2"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorboard = "2.12.3"
tensorflow-estimator = "2.12.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/naiprojekt"]

